leave component cards and dashboard card

--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -49,7 +49,8 @@
         </div> 
         <form #PasswordForm="ngForm">
           <mat-form-field>
-            <input matInput placeholder="Email" id="email"  name="email"  [(ngModel)]="email" required>      
+            <input type="text" matInput placeholder=" enter your Email" id="email"  name="email"  [(ngModel)]="email" required email>
+            <mat-error>email is required</mat-error>      
            </mat-form-field>
           <div class="flex justify-between -mt-3"  *ngIf="isValidEmail">
           <span class="text-green-500 font-medium">Code Has Been Sent Your Registered Mail </span>
