--- a/src/app/admin/employees/employees.component.html
+++ b/src/app/admin/employees/employees.component.html
@@ -262,62 +262,65 @@
       </mat-card>
 
       <mat-card class="p-6 bg-white px-2 mx-3 my-3 ">
-
         <h3>qulificationDetail</h3>
-        <form action="" [formGroup]="qualiDetail">
+        <form [formGroup]="qualiDetail" >
+          <div formGroupName="sslc">
           <div class="grid lg:grid-cols-3 gap-4">
-            <div class="w-1/4">
-              <h3>SSLC</h3>
+            <h3>sslc</h3>
+                <mat-form-field class="example-full-width">
+                  <mat-label>Year of passing</mat-label>
+                  <input matInput placeholder="Enter Year Of passing" name="yearOfPassing" formControlName="yearOfPassing">
+                </mat-form-field>
+    
+                <mat-form-field class="example-full-width">
+                  <mat-label>Marks</mat-label>
+                  <input matInput placeholder="Employee Branch Number" name="yearOfPassing" formControlName="yearOfPassing">
+                </mat-form-field>
+              </div>
             </div>
-            <!-- <div class="grid grid-cols-2 gap-4"> -->
-            <mat-form-field class="example-full-width">
-              <mat-label>Year of passing</mat-label>
-              <input matInput placeholder="Enter Year Of passing" name="yearOfPassing" formControlName="yearOfPassing">
-            </mat-form-field>
-
-            <mat-form-field class="example-full-width">
-              <mat-label>Marks</mat-label>
-              <input matInput placeholder="Employee Branch Number">
-            </mat-form-field>
-          </div>
+            
           <!-- </div> -->
-
+          <div formGroupName="puc">
           <div class="grid lg:grid-cols-4 gap-3">
             <h3>PUC</h3>
-            <mat-form-field class="example-full-width">
-              <mat-label>Year of passing</mat-label>
-              <input matInput placeholder="Enter year of passing ">
-            </mat-form-field>
-
-            <mat-form-field class="example-full-width">
-              <mat-label>Marks</mat-label>
-              <input matInput placeholder="Enter Marks">
-            </mat-form-field>
-
-            <mat-form-field class="example-full-width">
-              <mat-label>Specialization</mat-label>
-              <input matInput placeholder="Enter specialization">
-            </mat-form-field>
+              <mat-form-field class="example-full-width">
+                <mat-label>Year of passing</mat-label>
+                <input matInput placeholder="Enter year of passing " name="yearOfPassing" formControlName="yearOfPassing">
+              </mat-form-field>
+  
+              <mat-form-field class="example-full-width">
+                <mat-label>Marks</mat-label>
+                <input matInput placeholder="Enter Marks" name="marks" formControlName="marks">
+              </mat-form-field>
+  
+              <mat-form-field class="example-full-width">
+                <mat-label>Specialization</mat-label>
+                <input matInput placeholder="Enter specialization" name="specialization" formControlName="specialization">
+              </mat-form-field>
+            </div>      
           </div>
+
+          <div formGroupName="degree">
           <div class="grid lg:grid-cols-4 gap-3">
             <h3>Graduation</h3>
-            <mat-form-field class="example-full-width">
-              <mat-label>Year of passing</mat-label>
-              <input matInput placeholder="Enter year of passing ">
-            </mat-form-field>
-
-            <mat-form-field class="example-full-width">
-              <mat-label>Marks</mat-label>
-              <input matInput placeholder="Enter Marks">
-            </mat-form-field>
-
-            <mat-form-field class="example-full-width">
-              <mat-label>Specialization</mat-label>
-              <input matInput placeholder="Enter specialization">
-            </mat-form-field>
+              <mat-form-field class="example-full-width">
+                <mat-label>Year of passing</mat-label>
+                <input matInput placeholder="Enter year of passing " name="yearOfPassing" formControlName="yearOfPassing">
+              </mat-form-field>
+  
+              <mat-form-field class="example-full-width">
+                <mat-label>Marks</mat-label>
+                <input matInput placeholder="Enter Marks" name="marks" formControlName="marks">
+              </mat-form-field>
+  
+              <mat-form-field class="example-full-width">
+                <mat-label>Specialization</mat-label>
+                <input matInput placeholder="Enter specialization" name="specialization" formControlName="specialization">
+              </mat-form-field>
+            </div>
           </div>
           <div class="align">
-          <button mat-raised-button color="primary" class="">Submit</button>
+          <button mat-raised-button color="primary" [disabled]="!qualiDetail.valid" class="">Submit</button>
           </div>
         </form>
       </mat-card>
