--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,22 +1,2 @@
-
+<app-sidebarmenulist [list]="lists"></app-sidebarmenulist>
   
-<div class="side-nav-content bg-gray-100"  [ngClass]="expand ? 'expand' : 'collapse'">
-    <div class="logo">
-        <a href="/" class="logo-mini">
-          <img src="assets/images/logo2.png" alt="logo of company"  *ngIf="expand"/> 
-        </a>
-    </div>
-    <img  src="assets/images/xlogo.png" alt="logo of company"  *ngIf="!expand"/>
-  <!-- <hr style="border-bottom: 1px solid white; width: 95%; margin-left: 8px" /> -->
-    <ul class="nav-list cursor-pointer">
-        <li class="nav-list-item 
-        "*ngFor="let item of list"
-        routerLink="{{ item.routeLink }}" 
-        >
-            <i class="{{item.icon}} "></i> 
-            <span>
-                <a> {{item.name}}</a>  
-            </span> 
-        </li>
-    </ul>
-</div>
