--- a/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/user-dashboard/user-dashboard.component.html
@@ -11,7 +11,7 @@
       <div class="bg-gray-100">
         <div fxLayout="row wrap" fxLayoutGap="10px grid">
           <div fxFlex="24%" fxFlex.xs="100%" fxFlex.sm="50%" fxFlex.md="50%" *ngFor="let card of usercardData">
-            <div class="flex flex-wrap justify-between card-custom border ml-4 mr-4 mb-4 mt-4" >
+            <div class="flex flex-wrap justify-between card-custom border ml-4 mr-4 mb-4 mt-4" routerLink="{{ card.url }}" >
               
               <div class="bg-blue-300 text-blue-700 rounded flex justify-center p-3 ">
                 <i class="material-icons">{{card.icon}}</i>
