--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,7 @@
 <mat-drawer-container autosize="true" >
     <mat-drawer mode="side"  opened>
-        <app-sidebar  class="sidebar" #sidebar [expand]=expand></app-sidebar>
+        <!-- <app-sidebar  class="sidebar" #sidebar [expand]=expand></app-sidebar> -->
+<app-sidebarmenulist [list]="lists" class="sidebar" #sidebar [expand]=expand></app-sidebarmenulist>
     </mat-drawer>
     <mat-drawer-content style="min-height: calc(100vh - 200px); overflow-y: auto; overflow-x: hidden;" >
         <app-header  (toggle)="toggle()"></app-header>
