--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -8,16 +8,16 @@
     </div>
 
     <!-- card design -->
-    <div class="min-h-screen bg-gray-100">
-      <div fxLayout="row wrap" fxLayoutGap="10px grid">
-        <div fxFlex="24%" fxFlex.xs="100%" fxFlex.sm="50%" fxFlex.md="50%" *ngFor="let card of cardData">
-          <div class="flex flex-wrap justify-between card-custom border ml-4 mr-4 mb-4 mt-4">
+    <div class="min-h-screen ml-3 mr-3">
+      <div fxLayout="row wrap" fxLayoutGap="10px grid" >
+        <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%" fxFlex.md="50%" *ngFor="let card of cardData" (click)="onSelect(card)">
+          <div class="flex flex-wrap justify-between card-custom border ">
             <div class="bg-blue-300 text-blue-700 rounded flex justify-center p-3 ">
               <i class="material-icons">{{card.icon}}</i>
             </div>
             <div class="text-center">
               <div class="text-lg font-extrabold">{{card.count}} </div>
-              <div class="text-base">{{card.lable}}</div>
+              <div class="text-base text-sm">{{card.lable}}</div>
             </div>
           </div>
         </div>
