--- a/src/app/admin/employees/employees.component.html
+++ b/src/app/admin/employees/employees.component.html
@@ -2,7 +2,9 @@
   <div class="flex flex-col">
 
     <div class="flex flex-col bg-white-500">
+
       <div class="flex flex-row">
+        <app-content-navbar></app-content-navbar>
         <h3 class="font-bold text-gray-500 p-2">Employee Data Form</h3>
       </div>
       <!--p tag -->
