--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,7 +11,7 @@
       <mat-card-content>
         <form #loginForm="ngForm">               
           <mat-form-field>
-            <input matInput placeholder="Username" [(ngModel)]="user.email" name="username" required>
+            <input matInput placeholder="Username" [(ngModel)]="user.userName" name="username" required>
             <mat-error>
               Please provide a valid email address
             </mat-error>
