--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -1,46 +1,45 @@
-<div class="flex flex-col">
-  <div class="flex flex-col bg-white-500">
-    <div class="flex flex-row">
-      <h3 class="font-bold text-gray-500 span-2">Emspanloyee Data Form</h3>
-    </div>
-    <!--span tag -->
+<div style="margin: 15px;" class="example-container ">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <!-- Position Column -->
+    <ng-container matColumnDef="profile_photo">
+      <th mat-header-cell *matHeaderCellDef> </th>
+      <td mat-cell *matCellDef="let element" style="width: 60px;"> <img src="{{element?.profile_photo}}" style="    width: 40px;
+        border-radius: 50%;"></td>
+    </ng-container>
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element">{{element.position}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="weight">
+      <th mat-header-cell *matHeaderCellDef> Weight </th>
+      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="symbol">
+      <th mat-header-cell *matHeaderCellDef> Symbol </th>
+      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let element" > 
+        <button mat-icon-button color="primary" aria-label="Example icon button with a vertical three dot icon" (click)="$event.stopPropagation();action(element,'edit')">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="primary" aria-label="Example icon button with a home icon" (click)="$event.stopPropagation();action(element,'delete')">
+          <mat-icon>delete_forever</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
   </div>
-
-  <!-- card design -->
-  <div class="min-h-screen bg-gray-100">
-
-     <mat-card class="m-3 p-0 " *ngFor="let list of lists"  >
-
-      <div class="flex  items-center" (click)="onClick(list)" routerLink="/emp">
-      <div class="w-10/12">
-      <div class="flex justify-between items-center m-0 " >
-        <div class="flex flex-row items-center text-sm">
-          <span class="font-bold "><i class="fa-sharp fa-solid fa-user"></i></span>
-          <span class="text-grey-400 font-medium mx-2">{{list.name}}</span>
-        </div>
-        <div class="flex flex-row items-center text-sm">
-          <span class="font-bold "><i class="fa-sharp fa-solid fa-envelope"></i></span>
-          <span class="text-grey-400 font-medium mx-2">{{list.emailId}}</span>
-        </div>
-      </div>
-
-      <div class="flex justify-between items-center m-0 ">
-
-        <div class="flex flex-row  items-center text-sm">
-          <span class="text-grey-400 font-medium">{{list.EmpID}} Developer </span>
-        </div>
-        <div class="flex flex-row items-center text-sm">
-          <span class="font-bold "><i class="fa-solid fa-id-badge"></i></span>
-          <span class="text-grey-400 font-medium mx-3"> xxxxxxx585</span>
-        </div>
-      </div>
-    </div>
-    <div class="2/12">
-      <div class="ml-20">
-        <span><i class="material-icons">arrow_forward_ios</i></span>
-      </div>
-    </div>
-  </div>
-    </mat-card> 
-  </div>
-</div>
