--- a/src/app/shared/components/leave/leave.component.html
+++ b/src/app/shared/components/leave/leave.component.html
@@ -1,78 +1,82 @@
-<div class="flex-auto"> 
-   <div class="flex flex-col">
-    <div class="flex flex-col bg-white-500">
-      <div class="flex flex-row">
-        <h3 class="font-bold text-gray-500 p-2">Leave request</h3>
-      </div>
-      
-    </div>
+<div class="flex-auto">
+    <div class="flex flex-col">
+        <div class="flex flex-col bg-white-500">
+            <div class="flex flex-row">
+                <h3 class="font-bold text-gray-500 p-2">Leave Balance</h3>
+            </div>
 
-     <!-- card design -->
-    <div class=" bg-gray-100">
-      <div class="grid lg:grid-cols-4 gap-3 m-3 sm:grid-cols-2 ">
-        <div class=" p-0 rounded section-bxs">
-            <div class="flex items-center p-2  bg-gradient-to-r from-indigo-300 via-purple-200 to-pink-300">
-            <span class="material-icons lg:p-3 sm:p-2 bg-white rounded text-indigo-500 lg:mx-4">
-                holiday_village
-                </span>
-                <span class="text-center font-normal  lg:text-xl  mx-3 text-gray-500">Pending leave</span>
-            </div>
-            <div class="bg-white p-2 text-center text-gray-500 leading-none">
-                <span class="text-2xl font-bold">12/</span>
-                <span class="font-semibold">15</span>
-                <div class="mt-1 text-lg ">
-                    <span>Current Available</span>
-                </div>
-            </div>               
         </div>
-        <div class=" p-0 rounded section-bxs">
-            <div class="flex  items-center p-2  bg-gradient-to-r from-green-200 to-blue-300">
-            <span class="material-icons lg:p-3 sm:p-2 md:p-3 bg-white rounded text-green-300 lg:mx-3" style="    height: 44px;">
-                houseboat
-                </span>
-                <span class="text-center font-normal sm:text-sm lg:text-xl mx-3 text-gray-500">Vacation Leave</span>
-            </div>
-            <div class="bg-white p-2 text-center text-gray-500 leading-none">
-                <span class="text-2xl font-bold">12/</span>
-                <span class="font-semibold">15</span>
-                <div class="mt-1 text-lg ">
-                    <span>Current Available</span>
-                </div>
-            </div>               
-        </div>
-        <div class=" p-0 section-bxs rounded ">
-            <div class="flex  items-center p-2 mx-auto bg-gradient-to-r from-indigo-200 via-purple-300 to-pink-300">
-            <span class="material-icons lg:p-3 sm:p-2 bg-white rounded text-indigo-500 lg:mx-3" style="    height: 44px;">
-                holiday_village
-                </span>
-                <span class="text-center font-normal sm:text-sm lg:text-xl mx-3 text-gray-500">Paid Leave</span>
-            </div>
-            <div class="bg-white p-2 text-center text-gray-500 leading-none">
-                <span class="text-2xl font-bold">12/</span>
-                <span class="font-semibold">15</span>
-                <div class="mt-1 text-lg ">
-                    <span>Current Available</span>
-                </div>
-            </div>               
-        </div>
-        
-        <div class=" p-0 section-bxs  rounded ">
-            <div class="flex  items-center p-2 mx-auto bg-gradient-to-r from-indigo-300 to-green-200">
-            <span class="material-icons lg:p-3 sm:p-2 bg-white rounded text-indigo-500 lg:mx-3" style="    height: 44px;">
-                medication
-                </span>
-                <span class="text-center font-normal sm:text-sm lg:text-xl mx-3 text-gray-500">Sick Leave</span>
-            </div>
-            <div class="bg-white p-2 text-center text-gray-500 leading-none">
-                <span class="text-2xl font-bold">12/</span>
-                <span class="font-semibold">15</span>
-                <div class="mt-1 text-lg ">
-                    <span>Current Available</span>
-                </div>
-            </div>               
-        </div> 
-    </div>
-    </div>
-  </div>
 
-  
+        <!-- card design -->
+        <div class=" bg-gray-100">
+            <div class="grid lg:grid-cols-4 gap-3 m-3 sm:grid-cols-2 ">
+                <div class=" p-0 rounded section-bxs">
+                    <div class="flex items-center p-2  bg-gradient-to-r from-indigo-300 via-purple-200 to-pink-300">
+                        <span class="material-icons lg:p-3 sm:p-2 bg-white rounded text-indigo-500 lg:mx-4">
+                            holiday_village
+                        </span>
+                        <span class="text-center font-normal  lg:text-xl  mx-3 text-gray-500">Pending leave</span>
+                    </div>
+                    <div class="bg-white p-2 text-center text-gray-500 leading-none">
+                        <span class="text-2xl font-bold">12/</span>
+                        <span class="font-semibold">15</span>
+                        <div class="mt-1 text-lg ">
+                            <span>Current Available</span>
+                        </div>
+                    </div>
+                </div>
+                <div class=" p-0 rounded section-bxs">
+                    <div class="flex  items-center p-2  bg-gradient-to-r from-green-200 to-blue-300">
+                        <span class="material-icons lg:p-3 sm:p-2 md:p-3 bg-white rounded text-green-300 lg:mx-3"
+                            style="    height: 44px;">
+                            houseboat
+                        </span>
+                        <span class="text-center font-normal sm:text-sm lg:text-xl mx-3 text-gray-500">Vacation
+                            Leave</span>
+                    </div>
+                    <div class="bg-white p-2 text-center text-gray-500 leading-none">
+                        <span class="text-2xl font-bold">12/</span>
+                        <span class="font-semibold">15</span>
+                        <div class="mt-1 text-lg ">
+                            <span>Current Available</span>
+                        </div>
+                    </div>
+                </div>
+                <div class=" p-0 section-bxs rounded ">
+                    <div
+                        class="flex  items-center p-2 mx-auto bg-gradient-to-r from-indigo-200 via-purple-300 to-pink-300">
+                        <span class="material-icons lg:p-3 sm:p-2 bg-white rounded text-indigo-500 lg:mx-3"
+                            style="    height: 44px;">
+                            holiday_village
+                        </span>
+                        <span class="text-center font-normal sm:text-sm lg:text-xl mx-3 text-gray-500">Paid Leave</span>
+                    </div>
+                    <div class="bg-white p-2 text-center text-gray-500 leading-none">
+                        <span class="text-2xl font-bold">12/</span>
+                        <span class="font-semibold">15</span>
+                        <div class="mt-1 text-lg ">
+                            <span>Current Available</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class=" p-0 section-bxs  rounded ">
+                    <div class="flex  items-center p-2 mx-auto bg-gradient-to-r from-indigo-300 to-green-200">
+                        <span class="material-icons lg:p-3 sm:p-2 bg-white rounded text-indigo-500 lg:mx-3"
+                            style="    height: 44px;">
+                            medication
+                        </span>
+                        <span class="text-center font-normal sm:text-sm lg:text-xl mx-3 text-gray-500">Sick Leave</span>
+                    </div>
+                    <div class="bg-white p-2 text-center text-gray-500 leading-none">
+                        <span class="text-2xl font-bold">12/</span>
+                        <span class="font-semibold">15</span>
+                        <div class="mt-1 text-lg ">
+                            <span>Current Available</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
