--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -26,7 +26,7 @@
           <button mat-raised-button color="primary" [disabled]="!loginForm.form.valid" (click)="submit()" class="w-full">Login</button>
             </div>
             <div class="no-underline mb-3">
-          <a routerLink="../forgot-password">Forgot Password ?</a>
+          <!-- <a routerLink="../forgot-password">Forgot Password ?</a> -->
             </div>
         
         </form>
