--- a/src/app/shared/components/leave/leave.component.html
+++ b/src/app/shared/components/leave/leave.component.html
@@ -12,7 +12,7 @@
             <div class="grid lg:grid-cols-4 gap-3 m-3 sm:grid-cols-2 ">
                 <div class=" p-0 rounded section-bxs">
                     <div class="flex items-center p-2  bg-gradient-to-r from-indigo-300 via-purple-200 to-pink-300">
-                        <span class="material-icons lg:p-3 sm:p-2 bg-white rounded text-indigo-500 lg:mx-4">
+                        <span class="material-icons lg:p-3 sm:p-2 p-2 bg-white rounded text-indigo-500 lg:mx-4">
                             holiday_village
                         </span>
                         <span class="text-center font-normal  lg:text-xl  mx-3 text-gray-500">Pending leave</span>
@@ -27,8 +27,7 @@
                 </div>
                 <div class=" p-0 rounded section-bxs">
                     <div class="flex  items-center p-2  bg-gradient-to-r from-green-200 to-blue-300">
-                        <span class="material-icons lg:p-3 sm:p-2 md:p-3 bg-white rounded text-green-300 lg:mx-3"
-                            style="    height: 44px;">
+                        <span class="material-icons lg:p-3 sm:p-2 md:p-3 p-2 bg-white rounded text-green-300 lg:mx-3">
                             houseboat
                         </span>
                         <span class="text-center font-normal sm:text-sm lg:text-xl mx-3 text-gray-500">Vacation
@@ -45,8 +44,7 @@
                 <div class=" p-0 section-bxs rounded ">
                     <div
                         class="flex  items-center p-2 mx-auto bg-gradient-to-r from-indigo-200 via-purple-300 to-pink-300">
-                        <span class="material-icons lg:p-3 sm:p-2 bg-white rounded text-indigo-500 lg:mx-3"
-                            style="    height: 44px;">
+                        <span class="material-icons lg:p-3 sm:p-2 p-2 bg-white rounded text-indigo-500 lg:mx-3">
                             holiday_village
                         </span>
                         <span class="text-center font-normal sm:text-sm lg:text-xl mx-3 text-gray-500">Paid Leave</span>
@@ -62,7 +60,7 @@
 
                 <div class=" p-0 section-bxs  rounded ">
                     <div class="flex  items-center p-2 mx-auto bg-gradient-to-r from-indigo-300 to-green-200">
-                        <span class="material-icons lg:p-3 sm:p-2 bg-white rounded text-indigo-500 lg:mx-3"
+                        <span class="material-icons lg:p-3 sm:p-2 p-2 bg-white rounded text-indigo-500 lg:mx-3"
                             style="    height: 44px;">
                             medication
                         </span>
