--- a/src/app/user/leavemanagement/leave-apply/leave-apply.component.html
+++ b/src/app/user/leavemanagement/leave-apply/leave-apply.component.html
@@ -1,9 +1,9 @@
 <mat-card class="m-4">
-  <form [formGroup]="leaveForm" >
-    <h3 class="font-medium">Applying for Leave</h3>
-    <div class="grid grid-cols gap-3">
-      <mat-form-field appearance="fill">
-        <mat-label>Leave type</mat-label>
+  <form [formGroup]="leaveForm">
+    <h3 class="font-medium">Applying for leave</h3>
+    <div class="grid grid-cols-2 gap-3">
+      <mat-form-field appearance="outline">
+        <mat-label>leaveType</mat-label>
         <mat-select name="leaveType" formControlName="leaveType">
           <mat-option *ngFor="let type of leaveType " [value]="type.value">
             {{type.label}}
@@ -13,34 +13,68 @@
       </mat-form-field>
 
       <mat-form-field appearance="outline">
-        <mat-label> Start date -- End date</mat-label>
-        <mat-date-range-input [rangePicker]="picker"  min="{{minDate}}"  >
-          <input matStartDate placeholder=" From date -" name="start" formControlName="start">
-          <input matEndDate placeholder=" To date" name="end" formControlName="end">
-        </mat-date-range-input>
-        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-date-range-picker #picker></mat-date-range-picker>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Contact Detail</mat-label>
+        <mat-label>ContactDetail</mat-label>
         <input type="number" matInput placeholder=" Enter contact detail" name="phone_no" formControlName="phone_no">
       </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Textarea</mat-label>
-        <textarea matInput  name="reason" formControlName="reason"></textarea>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>attachFile</mat-label>
-        <input  matInput placeholder="" name="" formControlName="">
-      </mat-form-field>
-
     </div>
+
+      <div class="grid grid-cols-3 gap-3">
+
+        <mat-form-field appearance="outline">
+          <mat-label> Start date -- End date</mat-label>
+          <mat-date-range-input [rangePicker]="picker" min="{{minDate}}">
+            <input matStartDate placeholder=" From date -" name="start" formControlName="start">
+            <input matEndDate placeholder=" To date" name="end" formControlName="end">
+          </mat-date-range-input>
+          <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-date-range-picker #picker></mat-date-range-picker>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>From session</mat-label>
+          <mat-select name="fromsession" formControlName="fromsession">
+            <mat-option *ngFor="let type of fromSession " [value]="type.value">
+              {{type.label}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>To session</mat-label>
+          <mat-select name="toSession" formControlName="tosession">
+            <mat-option *ngFor="let type of toSession " [value]="type.value">
+              {{type.label}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div class="grid grid-cols gap-3">
+
+      <mat-form-field appearance="outline" >
+        <mat-label>Reason</mat-label>
+        <textarea matInput name="reason" formControlName="reason"></textarea>
+      </mat-form-field>
+
+      <!-- <mat-form-field class="columns" >
+        <mat-label *ngIf="selectedFiles; else newFile">{{selectedFiles.item(0).name}}</mat-label>
+        <ng-template #newFile>
+          <mat-label>Choose file</mat-label>
+        </ng-template>
+        <input matInput  formControlName="file">
+        <button mat-icon-button matSuffix (click)="fileInput.click()">
+          <mat-icon>attach_file</mat-icon>
+        </button>
+        <input hidden (change)="selectFile($event)" #fileInput type="file" id="file" >
+      </mat-form-field> -->
+   
+    </div>
+    
+   
+
     <div class="flex justify-end">
-      <button  mat-raised-button color="primary" [disabled]="!leaveForm.valid" (click)="onSubmit()">Submit</button>
+      <button mat-raised-button color="primary" [disabled]="!leaveForm.valid" (click)="onSubmit()">Submit</button>
     </div>
   </form>
 </mat-card>
