--- a/src/app/admin/employee/add/add.component.html
+++ b/src/app/admin/employee/add/add.component.html
@@ -9,14 +9,11 @@
     </div>
 
     <!-- card design -->
-    <div class="min-h-screen bg-gray-100">
+    <div class="min-h-screen bg-gray-100" *ngIf="showForm">
       <mat-card class="p-6 bg-white px-2 mx-3 my-3 ">
         <form [formGroup]="form">
           <h3>Personal detail</h3>
-
           <div class="grid  lg:grid-cols-4 md:grid-cols-2 gap-3 p-2">
-
-
             <mat-form-field class="example-full-width">
               <mat-label> Full name</mat-label>
               <input matInput placeholder=" Enter employee name" name="fullName" formControlName="fullName">
@@ -330,26 +327,3 @@
         </form>
       </mat-card>
     </div>
-
-    <!-- <mat-form-field >
-            <mat-label>Skill</mat-label>
-            <mat-select  multiple>
-              <mat-option *ngFor="let skill of skills " [value]="skill.value" >
-                {{skill.viewValue}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-  
-          <mat-form-field >
-            <mat-label>qualification </mat-label>
-            <mat-select  >
-              <mat-option *ngFor="let quali of qualification " [value]="quali.value" >
-                {{quali.viewValue}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field> -->
-
-    <!-- <div class="grid  lg:grid-cols-3 gap-3 p-2"> -->
-
-
-    <!-- </div> -->
