--- a/src/app/shared/components/tabledata/tabledata.component.html
+++ b/src/app/shared/components/tabledata/tabledata.component.html
@@ -3,13 +3,15 @@
     <!-- Position Column -->
     <ng-container matColumnDef="profile_photo">
       <th mat-header-cell *matHeaderCellDef> </th>
-      <td mat-cell *matCellDef="let element" style="width: 60px;"> <img src="{{element?.profile_photo}}" style="    width: 40px;
+      <td mat-cell *matCellDef="let element" style="width: 100px;"> <img *ngIf="element?.profile_photo" src="{{element?.profile_photo}}" style=" width: 40px;
+        border-radius: 50%;">
+        <img *ngIf="!element?.profile_photo" src="assets/images/profile.jpg" style=" width: 40px;
         border-radius: 50%;"></td>
     </ng-container>
-    <ng-container matColumnDef="empId">
+    <!-- <ng-container matColumnDef="empId">
       <th mat-header-cell *matHeaderCellDef> Emp Id. </th>
       <td mat-cell *matCellDef="let element">{{element.empId}} </td>
-    </ng-container>
+    </ng-container> -->
   
     <!-- Name Column -->
     <ng-container matColumnDef="name">
@@ -20,17 +22,17 @@
     <!-- Weight Column -->
     <ng-container matColumnDef="mobile">
       <th mat-header-cell *matHeaderCellDef> Mobile </th>
-      <td mat-cell *matCellDef="let element"> {{element.mobileNo}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.mobile}} </td>
     </ng-container>
   
     <!-- Symbol Column -->
     <ng-container matColumnDef="designation">
       <th mat-header-cell *matHeaderCellDef> Designation </th>
-      <td mat-cell *matCellDef="let element"> {{element.designation}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.designation | titlecase}} </td>
     </ng-container>
     <ng-container matColumnDef="department">
       <th mat-header-cell *matHeaderCellDef> Department </th>
-      <td mat-cell *matCellDef="let element"> {{element.department}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.departmentName | titlecase}} </td>
     </ng-container>
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Action </th>
