--- a/src/app/shared/components/tabledata/tabledata.component.scss
+++ b/src/app/shared/components/tabledata/tabledata.component.scss
@@ -19,14 +19,14 @@ table {
   .mat-header-cell {
     color: #4050b5 !important;
     font-weight: 800;
-    text-align: center;
+    text-align: left;
     border-bottom-width: 1px;
     border-bottom-color: #4050b5;
     border-bottom-style: solid;
   }
   .mat-cell, .mat-footer-cell {
     color: rgba(0,0,0,.87);
-    text-align: center;
+    text-align: left;
   }
  
   .mat-row:hover {
